# greenroofs

./: DifferenceInDifferenceRegression.ipynb  extract_greenroof_statistics.ipynb  pyproject.toml
.ipynb_checkpoints/: DifferenceInDifferenceRegression-checkpoint.ipynb
data/: BuildingFootprint_2010_19.sbn  BuildingFootprint_2010_19.sbx  BuildingFootprint_2010_19.shp.xml  BuildingFootprint_2010_19.shx  LC08_CU_027009_20190524_20210504_02.json  LC08_CU_027009_20190524_20210504_02.xml  LT05_CU_027009_20090512_20210430_02.json  LT05_CU_027009_20090512_20210430_02.xml  NateAnalysis_May2009-19LRfinal.csv  NateAnalysis_May2009-19LRfinal.xlsx  ZahraAnalysis_May2009-19LRfinal.xlsx  t_2009-2019.xlsx
data/.ipynb_checkpoints/: NateAnalysis_May2009-19LRfinal-checkpoint.csv
