[tool.poetry]
name = "greenroofs"
version = "0.1.0"
description = ""
authors = ["Nate Currit <currit@txstate.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
rasterio = "^1.3.9"
rasterstats = "^0.19.0"
numpy = "^1.26.1"
pyradiance = "^0.2.0"
geopandas = "^0.14.0"
statsmodels = "^0.14.0"


[tool.poetry.group.dev.dependencies]
jupyterlab = "^4.0.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
